# mlops_cookiecutter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: codecheck.yml  docker_test.yml  tests.yml  tests_old.yml
docs/: mkdocs.yaml
docs/source/: index.md
mlops_cookiecutter/: __init__.py  train_model.py  train_model_lightning.py
mlops_cookiecutter/data/: __init__.py  make_dataset.py  mnist_dataloader.py
mlops_cookiecutter/visualizations/: visualize.py
mlops_cookiecutter_internal/: __init__.py  predict_model.py  train_model.py  train_model_lightning.py
mlops_cookiecutter_internal/data/: mnist_dataloader.py
mlops_cookiecutter_internal/models/: model.py  model_lightning.py
mlops_cookiecutter_internal/visualizations/: visualize.py
tests/: test_data.py  test_import.py  test_model.py  test_training.py
tests/data/: test_data.py
tests/model/: test_model.py
tests/training/: test_training.py
